syntax = "proto3";
package zetachain.zetacore.authority;

option go_package = "github.com/zeta-chain/zetacore/x/authority/types";

// GenesisState defines the authority module's genesis state.
message GenesisState {}
